--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 // FOOTER
 @import "/resources/sass/footer.scss";
 
+// NAV-FOOTER
+@import "/resources/sass/nav-footer.scss";
+
 * {
     margin: 0;
     padding: 0;
