--- a/public/css/app.css
+++ b/public/css/app.css
@@ -88,6 +88,66 @@
   background-position: center;
 }
 
+.nav-footer-fluid {
+  background: #303030;
+}
+
+.nav-footer-fluid .container {
+  width: 1000px;
+  min-height: 80px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-footer-fluid .container .button {
+  padding: 10px;
+  border: 2px solid #0c80f7;
+  text-transform: uppercase;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  color: #fffffd;
+  transition: 200ms linear;
+}
+
+.nav-footer-fluid .container .button:hover {
+  transform: scale(1.1);
+  background: #1e518d;
+}
+
+.nav-footer-fluid .container .social-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  text-transform: uppercase;
+  color: #0c80f7;
+  cursor: default;
+}
+
+.nav-footer-fluid .container .icons-wrapper {
+  display: flex;
+  gap: 10px;
+}
+
+.nav-footer-fluid .container .icon {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  transition: 200ms linear;
+}
+
+.nav-footer-fluid .container .icon:hover {
+  transform: scale(1.2);
+}
+
 * {
   margin: 0;
   padding: 0;
