--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,9 @@
 // HEADER
 @import "/resources/sass/header.scss";
 
+// MAIN
+@import "/resources/sass/main.scss";
+
 // FOOTER
 @import "/resources/sass/footer.scss";
 
