--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 // MAIN
 @import "/resources/sass/main.scss";
 
+// BANNER
+@import "/resources/sass/banner.scss";
+
 // FOOTER
 @import "/resources/sass/footer.scss";
 
