--- a/public/css/app.css
+++ b/public/css/app.css
@@ -139,6 +139,49 @@
   background: #1a71d2;
 }
 
+.banner-fluid {
+  background: #0082f9;
+  padding: 20px 0;
+}
+
+.banner-fluid .container {
+  width: 1000px;
+  min-height: 110px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 0 20px;
+  color: #fffffd;
+}
+
+.banner-fluid .container .thumb-wrapper {
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  gap: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 200ms linear;
+}
+
+.banner-fluid .container .thumb-wrapper .thumb-image {
+  width: 50px;
+  height: 50px;
+}
+
+.banner-fluid .container .thumb-wrapper .thumb-image img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.banner-fluid .container .thumb-wrapper h4 {
+  text-transform: uppercase;
+}
+
+.banner-fluid .container .thumb-wrapper:hover {
+  background: rgba(51, 51, 51, 0.2);
+}
+
 .footer-fluid {
   background-image: url("/img/footer-bg.jpg");
   background-size: cover;
