Esercizio completato (molto minimal ahahah)

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 // MAIN
 @import "/resources/sass/main.scss";
 
+// COMIC
+@import "/resources/sass/comic.scss";
+
 // BANNER
 @import "/resources/sass/banner.scss";
 
